# reversi-egui-telnet-terminal-no-esquema

./: Cargo.toml
src/: server.rs
