[package]
name = "reversi-egui"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "client"
path = "src/client.rs"

[[bin]]
name = "server"
path = "src/server.rs"

[dependencies]
eframe = "0.18" 
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.15"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
futures = "0.3"
futures-util = "0.3"